--- a/index.html
+++ b/index.html
@@ -1,182 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE html>
+    <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lux Voyage | plan to next</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
+    </head>
 
-<body>
-    <main>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="flight.html">Flights</a></li>
-                    <li><a href="#">My Trips</a></li>
-                    <li><a href="#">Check In</a></li>
-                    <li><a href="#">Contact</a></li>
+    <body>
+        <nav class="nav-bar">
+            <div class="content">
+                <div class="site-logo">
+                    <a href="#" class="logo-link">Lux Voyage</a>
+                </div>
+                <ul class="navigation">
+                    <li class="link"><a href="#home">Home</a></li>
+                    <li class="link"><a href="#about">About Us</a></li>
+                    <li class="link"><a href="#Destinations">Destination</a></li>
+                    <li class="link"><a href="#blog">Blog</a></li>
+                    <li class="link"><a href="#gallery">Gallery</a></li>
+                    <li class="link"><a href="#contact">Contact</a></li>
                 </ul>
-            </nav>
-        </header>
-        <h1 id="intro"> Where Nature's</h1>
-        <h1 id="intro"> Beauty Awaits</h1>
-        <h1 id="intro"> Your Discovery</h1>
-        <button id="booknow">Book Now</button>
+            </div>
+        </nav>
+        <header class="home" id="home">
+            <div class="content">
+                <h1>The <strong>best</strong> way to <strong>plan your next</strong> adventure</h1>
+                <h4>Explore the colorful world like never seen</h4>
+                <a href="book.html" class="btn-explore">
+                    Book Now
+                    <i class="ri-arrow-right-line"></i>
+                </a>
 
-        <div id="destination">
-            <form id="flightForm" action="flight.html" method="GET">
-                <div class="form-group">
-                    <label for="from">From:</label>
-                    <br>
-                    <input type="text" id="from" name="from" required>
-                </div>
-                <div class="form-group">
-                    <label for="to">To:</label>
-                    <br>
-                    <input type="text" id="to" name="to">
-                </div>
-                <div class="form-group">
-                    <label for="departure-date">Departure:</label>
-                    <br>
-                    <input type="date" id="departure-date" name="departure-date" required>
-                </div>
-                <div class="form-group">
-                    <label for="return-date">Return:</label>
-                    <br>
-                    <input type="date" id="return-date" name="return-date" required>
-                </div>
-                <div class="form-group">
-                    <label for="passengers">Passengers:</label>
-                    <br>
-                    <select id="passengers" name="passengers" required>
-                        <option value="0">Select</option>
-                        <option value="1">1 Adult</option>
-                        <option value="2">1 Adult, 1 Child</option>
-                        <option value="3">1 Adult, 2 Children</option>
-                        <option value="4">2 Adults</option>
-                        <option value="5">2 Adults, 1 Child</option>
-                        <option value="6">2 Adults, 2 Children</option>
-                    </select>
-                </div>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </main>
-    <div class="popular-picks">
-        <pre>Discover Popular
-Destinations
-        </pre>
-        <div class="places">
-            <button onclick="showImages('popular')">Popular</button>
-            <button onclick="showImages('united-states')">United States</button>
-            <button onclick="showImages('europe')">Europe</button>
-            <button onclick="showImages('asia')">Asia</button>
-            <button onclick="showImages('africa')">Africa</button>
-            <button onclick="showImages('south-america')">South America</button>
-            <button onclick="showImages('australia')">Australia</button>
-        </div>
-        <div class="images" id='images-container'></div>
-        <div class="info">
-            <p style="margin-top: 10%;">Read the blogs</p>
-            <div class="blogs">
-                <div class="blog-item">
-                    <img src="images/balloon.jpg">
-                    <div class="blog-content">
-                        <p class="blog-title">Hot Air Balloon Experience</p>
-                        <pre class="blog-description">Lorem ipsum dolor sit amet
-consectetur adipisicing elit.
-Facere officiis atq Provident.</pre>
-                        <p style="font-size: 18px; color: #99FF8C; margin-top: -15px;">Read More</p>
+            </div>
+        </header>
+        <section class="about" id="about">
+            <div class="content">
+                <div class="items">
+                    <div class="image">
+                        <img src="images/about.jpg">
                     </div>
-                </div>
-                <div class="blog-item">
-                    <img src="images/falls.jpg">
-                    <div class="blog-content">
-                        <p class="blog-title">Moss Glen Falls</p>
-                        <pre class="blog-description">Lorem ipsum dolor sit amet
-consectetur adipisicing elit.
-Facere officiis atq Provident.</pre>
-                        <p style="font-size: 18px; color: #99FF8C; margin-top: -15px;">Read More</p>
+                    <div class="item">
+                        <div class="item-content">
+                            <h2 class="about-title">
+                                About Us
+                            </h2>
+                            <div class="about-desc">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab possimus beatae vitae
+                                    repellat eos. Delectus nostrum maxime dicta commodi quae rerum hic libero officiis!
+                                    Voluptas facere amet illo atque tempora.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab possimus beatae vitae
+                                    repellat eos. Delectus nostrum maxime dicta commodi quae rerum hic libero officiis!
+                                    Voluptas facere amet illo atque tempora.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="item-data">
+                            <div class="col">
+                                <h1>387</h1>
+                                <span>completed trips</span>
+                            </div>
+                            <div class="col">
+                                <h1>71</h1>
+                                <span>Tour Guides</span>
+                            </div>
+                            <div class="col">
+                                <h1>46</h1>
+                                <span>Destinations</span>
+                            </div>
+                        </div>
+                        <button class="btn-explore">explore more<i class="ri-arrow-right-line"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="circle"><img class="woman" src="images/women.jpg"></div>
-    </div>
-    <div class="testimonial">
-        <div class="image-overlay"></div>
-        <img src="images/map3.jpg" class="colored-image">
-    </div>
-    <div class="testimony">
-        <pre style="font-size: 56px;
-    font-weight: bold;">See what travelers 
-    say about us</pre>
-        <div class="praise">
-            <p>Susan Anthony, CA</p>
-            <p>“Cant Believe I went this long without knowing LuxVoyage”</p>
-        </div>
+        </section>
 
-    </div>
+        <section class="Destinations" id="Destinations">
+            <div class="popular-picks">
+                <h2>Discover Popular Destinations</h2>
+                <div class="places">
+                    <button onclick="showImages('popular')">Popular</button>
+                    <button onclick="showImages('united-states')">United States</button>
+                    <button onclick="showImages('europe')">Europe</button>
+                    <button onclick="showImages('asia')">Asia</button>
+                    <button onclick="showImages('africa')">Africa</button>
+                    <button onclick="showImages('south-america')">South America</button>
+                </div>
+                <div class="images" id='images-container'></div>
+        </section>
+    </body>
+    <script src="script.js"></script>
 
-</body>
-<script src="script.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        showImages('popular');
-    });
-</script>
-<script>
-    // JavaScript to handle form submission
-    document.addEventListener('DOMContentLoaded', function () {
-        const flightForm = document.getElementById('flightForm');
-        flightForm.addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the default form submission
-
-            // Get values from the form
-            const from = document.getElementById('from').value;
-            const to = document.getElementById('to').value;
-            const departureDate = document.getElementById('departure-date').value;
-
-            // Construct URL with query parameters
-            const url = `flight.html?from=${encodeURIComponent(from)}&to=${encodeURIComponent(to)}&departure-date=${encodeURIComponent(departureDate)}`;
-
-            // Redirect to flight page
-            window.location.href = url;
-        });
-    });
-</script>
-<footer>
-    <div class="footer-section">
-        <h3>Company</h3>
-        <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms and Conditions</a></li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h3>Destinations</h3>
-        <ul>
-            <li><a href="#">United States</a></li>
-            <li><a href="#">Canada</a></li>
-            <li><a href="#">Europe</a></li>
-            <li><a href="#">Asia</a></li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h3>Support</h3>
-        <ul>
-            <li><a href="#">Before you Book</a></li>
-            <li><a href="#">At the Airport</a></li>
-            <li><a href="#">On the Flight</a></li>
-            <li><a href="#">Lost Property</a></li>
-        </ul>
-    </div>
-</footer>
-
-
-</html>
+    </html>
