--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <nav class="nav-bar">
             <div class="content">
                 <div class="site-logo">
-                    <a href="#" class="logo-link">Lux Voyage</a>
+                    <a href="index.html" class="logo-link">Lux Voyage</a>
                 </div>
                 <ul class="navigation">
                     <li class="link"><a href="#home">Home</a></li>
                     <li class="link"><a href="#about">About Us</a></li>
-                    <li class="link"><a href="#Destinations">Destination</a></li>
+                    <li class="link"><a href="#Destinations">Destinations</a></li>
                     <li class="link"><a href="#blog">Blog</a></li>
-                    <li class="link"><a href="#gallery">Gallery</a></li>
-                    <li class="link"><a href="#contact">Contact</a></li>
+                    <li class="link"><a href="book.html">Book Now</a></li>
+                    <li class="link"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
