--- a/book.html
+++ b/book.html
@@ -13,15 +13,11 @@
     <nav class="nav-bar">
         <div class="content">
             <div class="site-logo">
-                <a href="#" class="logo-link">Lux Voyage</a>
+                <a href="index.html" class="logo-link">Lux Voyage</a>
             </div>
             <ul class="navigation">
-                <li class="link"><a href="#home">Home</a></li>
-                <li class="link"><a href="#about">About Us</a></li>
-                <li class="link"><a href="#Destinations">Destination</a></li>
-                <li class="link"><a href="#blog">Blog</a></li>
-                <li class="link"><a href="#gallery">Gallery</a></li>
-                <li class="link"><a href="#contact">Contact</a></li>
+                <li class="link"><a href="index.html">Home</a></li>
+                <li class="link"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -45,114 +41,143 @@
                 <form id="flight-tab" class="tab-content active" style="display: block;">
                     <!-- Flight Tab Content -->
                     <div class="form-group">
-                        <label for="from">From:</label>
-                        <br>
-                        <input type="text" id="from" name="from" required>
+                        <div class="input__group">
+                            <input type="text" id="from" name="from" required>
+                            <label for="from">From:</label>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="to">To:</label>
-                        <br>
-                        <input type="text" id="to" name="to">
+                        <div class="input__group">
+                            <input type="text" id="to" name="to">
+                            <label for="to">To:</label>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="departure-date">Departure:</label>
-                        <br>
-                        <input type="date" id="departure-date" name="departure-date" required>
+                        <div class="input__group">
+                            <input type="date" id="departure-date" name="departure-date" required>
+                            <label for="departure-date">Departure:</label>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="return-date">Return:</label>
-                        <br>
-                        <input type="date" id="return-date" name="return-date" required>
+                        <div class="input__group">
+                            <input type="date" id="return-date" name="return-date" required>
+                            <label for="return-date">Return:</label>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="passengers">Passengers:</label>
-                        <br>
-                        <input type="text" id="passengers" name="passengers">
+                        <div class="input__group">
+                            <input type="text" id="passengers" name="passengers">
+                            <label for="passengers">Passengers:</label>
+                        </div>
                     </div>
-
+                    <button class="btn" id="flightButton"><i class="ri-search-line"></i></button>
                 </form>
                 <form id="hotel-tab" class="tab-content" style="display: none;">
                     <!-- Hotel Tab Content -->
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="text">
-                            <label>Location</label>
+                            <input type="text" id="location" name="location" required>
+                            <label for="location">Location:</label>
                         </div>
-                        <p>Where are you going?</p>
                     </div>
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="text">
-                            <label>Check In</label>
+                            <input type="date" id="departure-date" name="departure-date" required>
+                            <label for="from">Check In</label>
                         </div>
-                        <p>Add Date</p>
                     </div>
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="text">
-                            <label>Checkout</label>
+                            <input type="date" id="return-date" name="return-date" required>
+                            <label for="from">Checkout</label>
                         </div>
-                        <p>Add Date</p>
                     </div>
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="text">
-                            <label>Guests</label>
+                            <input type="text" id="guests" name="guests" required>
+                            <label for="guests">Guests</label>
                         </div>
-                        <p>Add Guests</p>
                     </div>
+                    <button class="btn" id="hotelButton"><i class="ri-search-line"></i></button>
                 </form>
                 <form id="car-tab" class="tab-content" style="display: none;">
                     <!-- Car Tab Content -->
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="text">
-                            <label>Location</label>
+                            <input type="text" id="location" name="location" required>
+                            <label for="from">Location</label>
                         </div>
-                        <p>Where</p>
                     </div>
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="date">
-                            <label>From</label>
+                            <input type="date" id="departure-date" name="departure-date" required>
+                            <label for="from">From</label>
                         </div>
-                        <p>Add Date</p>
                     </div>
-                    <div class="form__group">
+                    <div class="form-group">
                         <div class="input__group">
-                            <input type="date">
-                            <label>Until</label>
+                            <input type="date" id="return-date" name="return-date" required>
+                            <label for="from">Until</label>
                         </div>
-                        <p>Add Date</p>
                     </div>
+                    <button class="btn" id="carButton"><i class="ri-search-line"></i></button>
                 </form>
-                <button class="btn"><i class="ri-search-line"></i></button>
             </div>
         </div>
     </header>
     <script>
-        const tabs = document.querySelectorAll('.tab__item');
-        const tabContents = document.querySelectorAll('.tab-content');
+        document.addEventListener('DOMContentLoaded', function () {
+            const tabs = document.querySelectorAll('.tab__item');
+            const tabContents = document.querySelectorAll('.tab-content');
 
-        tabs.forEach(tab => {
-            tab.addEventListener('click', () => {
-                const target = document.querySelector(tab.dataset.tabTarget);
-                tabs.forEach(t => t.classList.remove('active'));
-                tab.classList.add('active');
-                tabContents.forEach(content => {
-                    if (content === target) {
-                        content.classList.add('active');
-                        content.style.display = 'block';
-                    } else {
-                        content.classList.remove('active');
-                        content.style.display = 'none';
-                    }
+            tabs.forEach(tab => {
+                tab.addEventListener('click', () => {
+                    const target = document.querySelector(tab.dataset.tabTarget);
+                    tabs.forEach(t => t.classList.remove('active'));
+                    tab.classList.add('active');
+                    tabContents.forEach(content => {
+                        if (content === target) {
+                            content.classList.add('active');
+                            content.style.display = 'block';
+                        } else {
+                            content.classList.remove('active');
+                            content.style.display = 'none';
+                        }
+                    });
                 });
+            });
+
+            const flightForm = document.getElementById('flight-tab');
+            const hotelForm = document.getElementById('hotel-tab');
+            const carForm = document.getElementById('car-tab');
+
+            function handleFormSubmit(event, form) {
+                event.preventDefault();
+                const formData = new FormData(form);
+                const urlParams = new URLSearchParams();
+                for (const pair of formData) {
+                    urlParams.append(pair[0], pair[1]);
+                }
+                window.location.href = `return.html?${urlParams.toString()}`;
+            }
+
+            flightForm.addEventListener('submit', function (event) {
+                handleFormSubmit(event, flightForm);
+            });
+
+            hotelForm.addEventListener('submit', function (event) {
+                handleFormSubmit(event, hotelForm);
+            });
+
+            carForm.addEventListener('submit', function (event) {
+                handleFormSubmit(event, carForm);
             });
         });
     </script>
 
 
+
 </body>
+<script src="book.js"></script>
 
 </html>
