--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="187" height="38" alt="logo">
+            <img src="./assets/images/logo.png" width="187" height="38" alt="logo">
           </a>
 
           <button class="nav-toggle-btn" aria-label="close menu" data-nav-toggler>
@@ -625,7 +625,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="187" height="38" alt="logo">
+            <img src="./assets/images/logo.png" width="187" height="38" alt="logo">
           </a>
 
           <p class="footer-text">
